--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 *.idea,
 *.pyc
+.idea/inspectionProfiles/Project_Default.xml
+.idea/modules.xml
+.idea/outsource.iml
+.idea/vcs.xml
+.idea/workspace.xml
